# cpp-json5

./: CHANGELOG.md  CMakeLists.txt  README.md
.github/workflows/: cmake.yml
cmake/: Catch2.cmake
include/json5/: json5.hpp
sample/: main.cpp  sample.json5
test/: test.cpp
